--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -33,9 +33,13 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          pwd
+          ls -l
           echo Add other actions to build,
           echo test, and deploy your project.
           echo ${{ secrets.SSHKEY }} > chave.pem
+          ls -l
           chmod 600 chave.pem
           ssh -o "StrictHostKeyChecking no" -i chave.pem gestor@158.158.51.141 "sudo apt update; sudo apt install apache2"
           #scp -i chave.pem gestor@158.158.51.141:/index.html /var/www/html/index.html
+          ls -l
