--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -41,5 +41,5 @@ jobs:
           ls -l
           chmod 600 chave.pem
           ssh -o "StrictHostKeyChecking no" -i chave.pem gestor@158.158.51.141 "sudo apt update; sudo apt install apache2"
-          #scp -i chave.pem gestor@158.158.51.141:/index.html /var/www/html/index.html
+          scp -o "StrictHostKeyChecking no" -i chave.pem index.html gestor@158.158.51.141:/var/www/html/index.html 
           ls -l
