--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -40,6 +40,6 @@ jobs:
           echo "${{ secrets.SSHKEY }}" > chave.pem
           ls -l
           chmod 600 chave.pem
-          ssh -o "StrictHostKeyChecking no" -i chave.pem gestor@158.158.51.141 "sudo apt update; sudo apt install apache2"
-          scp -o "StrictHostKeyChecking no" -i chave.pem ./index.html gestor@158.158.51.141:/var/www/html/index.html 
+          ssh -o "StrictHostKeyChecking no" -i chave.pem gestor@158.158.51.141 "sudo apt update; sudo apt install apache2; sudo chmod -R 777 /var/www/html/"
+          sudo scp -o "StrictHostKeyChecking no" -i chave.pem -r ./index.html gestor@158.158.51.141:/var/www/html/index.html 
           ls -l
